--- a/public_html/P40/P40.html
+++ b/public_html/P40/P40.html
@@ -10,11 +10,11 @@
   <body>
     <div class="jumbotron">
       <h1>Punto 40</h1><br>
-      <input type="text" id="name" placeholder="ingrese su nombre" style="width: 12%" class="col-lg-offset-3">
-      <input type="text" id="id" placeholder="ingrese su tipo de documento" style="width: 12%" class="col-lg-offset-2"><br><br>
-      <input type="number" id="num" placeholder="ingrese su numero de documento" style="width: 12%" class="col-lg-offset-3">
-      <input type="text" id="gender" placeholder="ingrese su genero biologico" style="width: 12%" class="col-lg-offset-2"><br><br>
-      <input type="text" id="live" placeholder="Es verdad que vive en cartago?" style="width: 12%" class="col-lg-offset-3">
+      <input type="text" id="name" placeholder="Enter your name" style="width: 12%" class="col-lg-offset-3">
+      <input type="text" id="id" placeholder="Enter your document type" style="width: 12%" class="col-lg-offset-2"><br><br>
+      <input type="number" id="num" placeholder="Enter your document number" style="width: 12%" class="col-lg-offset-3">
+      <input type="text" id="gender" placeholder="Enter your biological gender" style="width: 12%" class="col-lg-offset-2"><br><br>
+      <input type="text" id="live" placeholder="Is it true that he lives in Cartago?" style="width: 12%" class="col-lg-offset-3">
       <button onclick="salve()" class="col-lg-offset-2">send</button><br><br><br><br>
       <p id="text40"></p>
     </div>
