--- a/public_html/P41/P41.html
+++ b/public_html/P41/P41.html
@@ -10,9 +10,9 @@
   <body>
     <div class="jumbotron">
       <h1>Punto 41</h1>
-      <input type="text" id="name" placeholder="Ingrese su nombre" style="width: 12%" class="col-lg-offset-5 "><br><br>
-      <input type="text" id="id" placeholder="Ingrese tipo de documento" style="width: 12%" class="col-lg-offset-5"><br><br>
-      <input type="number" id="num" placeholder="Ingrese numero de documento" style="width: 12%" class="col-lg-offset-5"><br><br>
+      <input type="text" id="name" placeholder="Enter your name" style="width: 12%" class="col-lg-offset-5 "><br><br>
+      <input type="text" id="id" placeholder="Enter document type" style="width: 12%" class="col-lg-offset-5"><br><br>
+      <input type="number" id="num" placeholder="Enter document number" style="width: 12%" class="col-lg-offset-5"><br><br>
       <button onclick="salve()" class="col-lg-offset-5">send</button><br><br><br>
       <p id="text41"></p>
     </div>
