--- a/public_html/P43/P43.html
+++ b/public_html/P43/P43.html
@@ -7,6 +7,13 @@
     <link href="../bootstrap/Css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
+    <div class="jumbotron">
+      <h1>Punto 43</h1>
+      <input type="number" id="a" placeholder="Ingrese un numero"><br><br>
+      <input type="number" id="b" placeholder="Ingrese un numero"><br><br>
+      <button id="modal1">send</button>
+    </div>
+    
     <div class="modal fade" tabindex="-1" role="dialog" id="ko">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
