--- a/public_html/P37/P37.html
+++ b/public_html/P37/P37.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="jumbotron">
-        <h1>Punto 37</h1>
+        <h1>Point 37</h1>
         <p id="text37" style="text-align: center;"></p>
     </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
