--- a/public_html/P38/P38.html
+++ b/public_html/P38/P38.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Punto 38</h1>
+      <h1>Point 38</h1>
       <p id="text38" style="text-align: center;"></p>
     </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
