--- a/public_html/P39/P39.html
+++ b/public_html/P39/P39.html
@@ -9,8 +9,8 @@
   </head>
   <body>
   <div class="jumbotron">
-    <h1>Punto 39</h1>
-    <input type="text" id="imprimir" placeholder="Ingrese su nombre" style="width: 10%; " class="col-lg-offset-5">
+    <h1>Point 39</h1>
+    <input type="text" id="imprimir" placeholder="Enter a number" style="width: 10%; " class="col-lg-offset-5">
     <button onclick="a()" >Send</button><br><br>
     <textarea id="text39" class="col-lg-offset-5"></textarea>
   </div>
