--- a/public_html/P40/P40.html
+++ b/public_html/P40/P40.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Punto 40</h1><br>
+      <h1>Point 40</h1><br>
       <input type="text" id="name" placeholder="Enter your name" style="width: 12%" class="col-lg-offset-3">
       <input type="text" id="id" placeholder="Enter your document type" style="width: 12%" class="col-lg-offset-2"><br><br>
       <input type="number" id="num" placeholder="Enter your document number" style="width: 12%" class="col-lg-offset-3">
