--- a/public_html/P41/P41.html
+++ b/public_html/P41/P41.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Punto 41</h1>
+      <h1>Point 41</h1>
       <input type="text" id="name" placeholder="Enter your name" style="width: 12%" class="col-lg-offset-5 "><br><br>
       <input type="text" id="id" placeholder="Enter document type" style="width: 12%" class="col-lg-offset-5"><br><br>
       <input type="number" id="num" placeholder="Enter document number" style="width: 12%" class="col-lg-offset-5"><br><br>
