--- a/public_html/P42/P42.html
+++ b/public_html/P42/P42.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Punto 42</h1>
+      <h1>Point 42</h1>
       <input type="text" id="su" placeholder="50 to 10"> <button onclick="a()">Result</button> <input type="number" id="result"><br><br>
       <input type="text" id="ala" placeholder="10 to 50"> <button onclick="b()">Result</button> <input type="number" id="re"><br><br>
       <input type="text" id="mul" placeholder="The multiplication between 50 and 10" style="width: 11%"> <button onclick="c()">Result</button> <input type="number" id="resu"><br><br>
