--- a/public_html/P43/P43.html
+++ b/public_html/P43/P43.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Punto 43</h1>
-      <input type="number" id="a" placeholder="Ingrese un numero"><br><br>
-      <input type="number" id="b" placeholder="Ingrese un numero"><br><br>
+      <h1 style="text-align: center">Point 43</h1>
+      <input type="number" id="a" placeholder="Enter a number"><br><br>
+      <input type="number" id="b" placeholder="Enter a number"><br><br>
       <button id="modal1">send</button>
     </div>
     
@@ -19,7 +19,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Punto 43</h4>
+        <h4 class="modal-title">Point 43</h4>
       </div>
       <div class="modal-body">
         <p id="rest"></p>
