--- a/public_html/P44/P44.html
+++ b/public_html/P44/P44.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Punto 44</h1>
-      <input type="number" id="s" placeholder="Ingrese un numero"><br><br>
-      <input type="number" id="d" placeholder="Ingrese un numero">
+      <h1>Point 44</h1>
+      <input type="number" id="s" placeholder="Enter a number"><br><br>
+      <input type="number" id="d" placeholder="Enter a number">
       <button id="modal1">send</button>
     </div>
     
@@ -19,7 +19,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">Punto 44</h4>
+            <h4 class="modal-title">Point 44</h4>
           </div>
           <div class="modal-body">
             <p id="rest"></p>
