--- a/public_html/P45/P45.html
+++ b/public_html/P45/P45.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Punto 45</h1>
-    <input type="number" id="num" placeholder="Ingrese un numero">
+      <h1>Point 45</h1>
+    <input type="number" id="num" placeholder="Enter a number">
     <button onclick="salve()">send</button><br><br>
     <p id="text45"></p>
     </div>
