--- a/public_html/P46/P46.html
+++ b/public_html/P46/P46.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Punto 46</h1>
-      <input type="number" id="nu" placeholder="Ingrese un numero">
+      <h1>Point 46</h1>
+      <input type="number" id="nu" placeholder="Enter a number">
       <button onclick="salve()">send</button><br><br>
       <p id="text46"></p>
     </div>
