--- a/public_html/P50/P50.html
+++ b/public_html/P50/P50.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Punto 50</h1>
-      <input type="number" id="emple" placeholder="Ingrese numero de empleados" style="width: 11%">
+      <h1>Point 50</h1>
+      <input type="number" id="emple" placeholder="Enter number of employees" style="width: 11%">
       <button onclick="salve()">send</button><br><br>
       <p id="p1"></p><br><br>
       
-      <input type="text" id="name" placeholder="Nombre del electricista" style="width: 11%">
-      <input type="number" id="nu" placeholder="Ingrese numero de horas trabajadas" style="width: 12%">
+      <input type="text" id="name" placeholder="Name of electrician" style="width: 11%">
+      <input type="number" id="nu" placeholder="Enter number of hours worked" style="width: 12%">
       <button onclick="vol()">send</button><br><br>
       <p id="p2"></p><br><br>
       <p id="p3"></p>
