--- a/public_html/P51/P51.html
+++ b/public_html/P51/P51.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Punto 51</h1>
-      <input type="number" id="year" placeholder="Ingrese su edad">
+      <h1>Point 51</h1>
+      <input type="number" id="year" placeholder="Enter your age">
       <button onclick="salve()">send</button><br><br>
       <p id="text51"></p>
     </div>
