--- a/public_html/P52/P52.html
+++ b/public_html/P52/P52.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Punto 52</h1>
-      <input type="number" id="base" placeholder="Ingrese la base del rectangulo" style="width: 11%"><br><br>
-      <input type="number" id="altu" placeholder="Ingrese la altura del rectangulo" style="width: 11%">
+      <h1>Point 52</h1>
+      <input type="number" id="base" placeholder="Enter the base of the rectangle" style="width: 11%"><br><br>
+      <input type="number" id="altu" placeholder="Enter the height of the rectangle" style="width: 11%">
       <button id="modal1">send</button>
     </div>
     
@@ -19,7 +19,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">Punto 52</h4>
+            <h4 class="modal-title">Point 52</h4>
           </div>
           <div class="modal-body">
             <p id="rest"></p>
