--- a/public_html/P53/P53.html
+++ b/public_html/P53/P53.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Punto 53</h1>
-      <input type="number" id="nun1" placeholder="Ingrese un numero"><br><br>
-      <input type="number" id="nun2" placeholder="Ingrese un numero"><br><br>
-      <input type="number" id="nun3" placeholder="Ingrese un numero"><br><br>
+      <h1>Point 53</h1>
+      <input type="number" id="nun1" placeholder="Enter a number"><br><br>
+      <input type="number" id="nun2" placeholder="Enter a number"><br><br>
+      <input type="number" id="nun3" placeholder="Enter a number"><br><br>
       <button onclick="salve()">send</button><br><br>
       <p id="text53"></p>
     </div>
