--- a/public_html/P54/P54.html
+++ b/public_html/P54/P54.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Punto 54</h1>
-      <input type="number" id="sal" placeholder="Sueldo del trabajador"><br><br>
-      <input type="number" id="ret" placeholder="Porcentaje de retención"><br><br>
+      <h1>Point 54</h1>
+      <input type="number" id="sal" placeholder="Salary of the worker"><br><br>
+      <input type="number" id="ret" placeholder="Retention Rate"><br><br>
       <button id="modal1">send</button>
     </div>
     
@@ -19,7 +19,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">Punto 54</h4>
+            <h4 class="modal-title">Point 54</h4>
           </div>
           <div class="modal-body">
             <p id="rest"></p>
