--- a/public_html/P55/P55.html
+++ b/public_html/P55/P55.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Punto 55</h1>
-      <input type="number" id="sa" placeholder="Ingrese un numero"><br><br>
+      <h1>Point 55</h1>
+      <input type="number" id="sa" placeholder="Enter a number"><br><br>
       <button onclick="salve()">send</button><br><br>
       <p id="text55"></p>
     </div>
