--- a/public_html/P18/P18.html
+++ b/public_html/P18/P18.html
@@ -4,9 +4,25 @@
         <title>JavaScript</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="../bootstrap/Css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>Point 18</div>
-        <script src="P18.js" type="text/javascript"></script>
+      <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-fm">
+              <span class="sr-only">To deploy / Hide Menu</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a href="../index.html" class="navbar-brand">Taller JavaScript</a>
+          </div>
+        </div>
+      </nav>
+      <h1 style="text-align: center">point 18</h1>
+      <script src="P18.js" type="text/javascript"></script>
+      <script src="../js/Jquery.js" type="text/javascript"></script>
+      <script src="../js/bootstrap.min.js" type="text/javascript"></script>
     </body>
 </html>
