--- a/public_html/P37/P37.html
+++ b/public_html/P37/P37.html
@@ -5,12 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../bootstrap/Css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-    <link href="Style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-fm">
+            <span class="sr-only">To deploy / Hide Menu</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="../index.html" class="navbar-brand">Taller JavaScript</a>
+        </div>
+      </div>
+    </nav>
     <div class="jumbotron">
-        <h1>Point 37</h1>
-        <p id="text37" style="text-align: center;"></p>
+      <h1 style="text-align: center">Point 37</h1>
+      <p id="text37" style="text-align: center;"></p>
     </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
