--- a/public_html/P39/P39.html
+++ b/public_html/P39/P39.html
@@ -5,14 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../bootstrap/Css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-    <link href="Style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-  <div class="jumbotron">
-    <h1>Point 39</h1>
-    <input type="text" id="imprimir" placeholder="Enter a number" style="width: 10%; " class="col-lg-offset-5">
-    <button onclick="a()" >Send</button><br><br>
-    <textarea id="text39" class="col-lg-offset-5"></textarea>
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-fm">
+            <span class="sr-only">To deploy / Hide Menu</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="../index.html" class="navbar-brand">Taller JavaScript</a>
+        </div>
+      </div>
+    </nav>
+    <div class="jumbotron">
+      <h1 style="text-align: center">Point 39</h1>
+      <div class="col-xs-2 col-lg-offset-5">
+        <input type="text" class="form-control" id="imprimir" placeholder="Enter a name">
+      </div>
+      <button class="btn btn-primary" onclick="a()" >Send</button><br><br>
+      <p id="text39" style="text-align: center"></p> 
   </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
