--- a/public_html/P40/P40.html
+++ b/public_html/P40/P40.html
@@ -8,15 +8,76 @@
     <link href="Style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-fm">
+            <span class="sr-only">To deploy / Hide Menu</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="../index.html" class="navbar-brand">Taller JavaScript</a>
+        </div>
+      </div>
+    </nav>
     <div class="jumbotron">
-      <h1>Point 40</h1><br>
-      <input type="text" id="name" placeholder="Enter your name" style="width: 12%" class="col-lg-offset-3">
-      <input type="text" id="id" placeholder="Enter your document type" style="width: 12%" class="col-lg-offset-2"><br><br>
-      <input type="number" id="num" placeholder="Enter your document number" style="width: 12%" class="col-lg-offset-3">
-      <input type="text" id="gender" placeholder="Enter your biological gender" style="width: 12%" class="col-lg-offset-2"><br><br>
-      <input type="text" id="live" placeholder="Is it true that he lives in Cartago?" style="width: 12%" class="col-lg-offset-3">
-      <button onclick="salve()" class="col-lg-offset-2">send</button><br><br><br><br>
-      <p id="text40"></p>
+      <div class="container" style="width: 80%;">
+        <div class="row centered-form">
+          <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
+            <div class="panel panel-default">
+              <div class="panel-heading" >
+                <h3 class="panel-title">Point 40</h3>
+              </div>
+              <div class="panel-body">
+                <form role="form">
+                  <div class="row">
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                      <div class="form-group">
+                        <label>Enter a name:</label>
+                        <input type="text" id="name" class="form-control input-sm" placeholder="Enter a name">
+                      </div>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                      <div class="form-group">
+                        <label>Enter your document type:</label>
+                        <input type="text"  id="id" class="form-control input-sm" placeholder="Enter your document type">
+                      </div>
+                    </div>
+                  </div>
+                </form>
+
+                <div class="form-group">
+                  <label>Enter your document number:</label>
+                  <input type="number" id="number" class="form-control input-sm" placeholder="Enter your document number">
+                </div>
+
+                <div class="row">
+                  <div class="col-xs-6 col-sm-6 col-md-6">
+                    <div class="form-group">
+                      <label>Enter your biological gender</label>
+                      <select class="form-control" id="gender">
+                        <option>Masculino</option>
+                        <option>Femenino</option>
+                      </select>
+
+                    </div>
+                  </div>
+                  <div class="col-xs-6 col-sm-6 col-md-6">
+                    <div class="form-group">
+                      <label>Is it true that he lives in Cartago?</label>
+                      <input type="text"  id="live" class="form-control input-sm" placeholder="Is it true that he lives in Cartago?">
+                    </div>
+                  </div>
+                </div>
+
+                <button type="submit" class="btn btn-primary" onclick="salve()">Send</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <p id="text40" style="text-align: center"></p>
     </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
