--- a/public_html/P41/P41.html
+++ b/public_html/P41/P41.html
@@ -8,13 +8,61 @@
     <link href="../P40/Style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-fm">
+            <span class="sr-only">To deploy / Hide Menu</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="../index.html" class="navbar-brand">Taller JavaScript</a>
+        </div>
+      </div>
+    </nav>
     <div class="jumbotron">
-      <h1>Point 41</h1>
-      <input type="text" id="name" placeholder="Enter your name" style="width: 12%" class="col-lg-offset-5 "><br><br>
-      <input type="text" id="id" placeholder="Enter document type" style="width: 12%" class="col-lg-offset-5"><br><br>
-      <input type="number" id="num" placeholder="Enter document number" style="width: 12%" class="col-lg-offset-5"><br><br>
-      <button onclick="salve()" class="col-lg-offset-5">send</button><br><br><br>
-      <p id="text41"></p>
+      <div class="container" style="width: 80%;">
+        <div class="row centered-form">
+          <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
+            <div class="panel panel-default">
+              <div class="panel-heading" >
+                <h3 class="panel-title">Point 41</h3>
+              </div>
+              <div class="panel-body">
+                <form role="form">
+                  <div class="row">
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                      <div class="form-group">
+                        <label>Enter a name:</label>
+                        <input type="text" id="name" class="form-control input-sm" placeholder="Enter a name">
+                      </div>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                      <div class="form-group">
+                        <label>Enter your document type:</label>
+                        <select class="form-control" id="id">
+                          <option>Identification card</option>
+                          <option>Identity card</option>
+                          <option>Civil registration</option>
+                        </select>
+
+                      </div>
+                    </div>
+                  </div>
+                </form>
+
+                <div class="form-group">
+                  <label>Enter your document number:</label>
+                  <input type="number" id="num" class="form-control input-sm" placeholder="Enter your document number">
+                </div>
+                <button type="submit" class="btn btn-primary" onclick="salve()">Send</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <p id="text41" style="text-align: center"></p>
     </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
