--- a/public_html/P42/P42.html
+++ b/public_html/P42/P42.html
@@ -7,16 +7,29 @@
     <link href="../bootstrap/Css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-fm">
+            <span class="sr-only">To deploy / Hide Menu</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="../index.html" class="navbar-brand">Taller JavaScript</a>
+        </div>
+      </div>
+    </nav>
     <div class="jumbotron">
-      <h1>Point 42</h1>
-      <input type="text" id="su" placeholder="50 to 10"> <button onclick="a()">Result</button> <input type="number" id="result"><br><br>
-      <input type="text" id="ala" placeholder="10 to 50"> <button onclick="b()">Result</button> <input type="number" id="re"><br><br>
-      <input type="text" id="mul" placeholder="The multiplication between 50 and 10" style="width: 11%"> <button onclick="c()">Result</button> <input type="number" id="resu"><br><br>
-      <input type="text" id="div" placeholder="The division between 50 and 10"> <button onclick="d()">Result</button> <input type="number" id="resul"><br><br>
-      <input type="text" id="div" placeholder="The division between 10 and 50"> <button onclick="e()">Result</button> <input type="number" id="resulta"><br><br>
-      <input type="text" id="mod" placeholder="The module of the divsion between 50 and 10" style="width: 11%"> <button onclick="f()">Result</button> <input type="number" id="resultad"><br><br>
-      <input type="text" id="res" placeholder="The subtraction between 50 and 10"> <button onclick="g()">Result</button> <input type="number" id="resultado"><br><br>
-      <input type="text" id="sum" placeholder="The sum between50 and 10"> <button onclick="h()">Result</button> <input type="number" id="resultados"><br><br> 
+      <h1 class="col-lg-offset-5">Point 42</h1><br>
+      <input type="text" id="su" placeholder="50 to 10" class="col-lg-offset-4" style="width: 14%"> <button  class="btn btn-success" onclick="a()">Result</button> <input type="number" id="result"><br><br>
+      <input type="text" id="ala" placeholder="10 to 50" class="col-lg-offset-4" style="width: 14%"> <button class="btn btn-success" onclick="b()">Result</button> <input type="number" id="re"><br><br>
+      <input type="text" id="mul" placeholder="The multiplication between 50 and 10" style="width: 14%" class="col-lg-offset-4"> <button  class="btn btn-success" onclick="c()">Result</button> <input type="number" id="resu"><br><br>
+      <input type="text" id="div" placeholder="The division between 50 and 10" class="col-lg-offset-4" style="width: 14%"> <button class="btn btn-success" onclick="d()">Result</button> <input type="number" id="resul"><br><br>
+      <input type="text" id="divs" placeholder="The division between 10 and 50" class="col-lg-offset-4" style="width: 14%"> <button class="btn btn-success" onclick="e()">Result</button> <input type="number" id="resulta"><br><br>
+      <input type="text" id="mod" placeholder="The module of the divsion between 50 and 10" style="width: 14%" class="col-lg-offset-4"> <button class="btn btn-success" onclick="f()">Result</button> <input type="number" id="resultad"><br><br>
+      <input type="text" id="res" placeholder="The subtraction between 50 and 10" class="col-lg-offset-4" style="width: 14%"> <button class="btn btn-success" onclick="g()">Result</button> <input type="number" id="resultado"><br><br>
+      <input type="text" id="sum" placeholder="The sum between50 and 10" class="col-lg-offset-4" style="width: 14%"> <button class="btn btn-success" onclick="h()">Result</button> <input type="number" id="resultados"><br><br> 
     </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
