--- a/public_html/P43/P43.html
+++ b/public_html/P43/P43.html
@@ -7,25 +7,47 @@
     <link href="../bootstrap/Css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-fm">
+            <span class="sr-only">To deploy / Hide Menu</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="../index.html" class="navbar-brand">Taller JavaScript</a>
+        </div>
+      </div>
+    </nav>
     <div class="jumbotron">
       <h1 style="text-align: center">Point 43</h1>
-      <input type="number" id="a" placeholder="Enter a number"><br><br>
-      <input type="number" id="b" placeholder="Enter a number"><br><br>
-      <button id="modal1">send</button>
-    </div>
-    
-    <div class="modal fade" tabindex="-1" role="dialog" id="ko">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Point 43</h4>
+      <div class="row">
+        <div class="col-xs-2 col-lg-offset-5">
+          <input class="form-control" id="a" type="number" placeholder="Enter a number"><br>
+        </div>
       </div>
-      <div class="modal-body">
-        <p id="rest"></p>
+
+      <div class="row">
+        <div class="col-xs-2 col-lg-offset-5">
+          <input class="form-control" id="b" type="number" placeholder="Enter a number"><br>
+        </div>
+        <button class="btn btn-danger" id="modal1">send</button>
       </div>
-    <script src="../js/Jquery.js" type="text/javascript"></script>
-    <script src="../js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="P43.js" type="text/javascript"></script>
+
+
+      <div class="modal fade" tabindex="-1" role="dialog" id="ko">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title">Point 43</h4>
+            </div>
+            <div class="modal-body">
+              <p id="rest"></p>
+            </div>
+            <script src="../js/Jquery.js" type="text/javascript"></script>
+            <script src="../js/bootstrap.min.js" type="text/javascript"></script>
+            <script src="P43.js" type="text/javascript"></script>
   </body>
 </html>
