--- a/public_html/P44/P44.html
+++ b/public_html/P44/P44.html
@@ -6,14 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../bootstrap/Css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   </head>
-  <body>
+  <body>      
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-fm">
+            <span class="sr-only">To deploy / Hide Menu</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="../index.html" class="navbar-brand">Taller JavaScript</a>
+        </div>
+      </div>
+    </nav>
+
     <div class="jumbotron">
-      <h1>Point 44</h1>
-      <input type="number" id="s" placeholder="Enter a number"><br><br>
-      <input type="number" id="d" placeholder="Enter a number">
-      <button id="modal1">send</button>
+      <h1 style="text-align: center">Point 44</h1><br>
+      <div class="row">
+        <div class="col-xs-2 col-lg-offset-5">
+          <input class="form-control" id="s" type="number" placeholder="Enter a number"><br>
+          <input class="form-control" id="d" type="number" placeholder="Enter a number">
+        </div>
+      </div><br><br>
+      <button class="btn btn-success col-lg-offset-6" id="modal1">send</button>
     </div>
-    
+
     <div class="modal fade" tabindex="-1" role="dialog" id="ko">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -24,6 +42,9 @@
           <div class="modal-body">
             <p id="rest"></p>
           </div>
+        </div>
+      </div>
+    </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
     <script src="P44.js" type="text/javascript"></script>
