--- a/public_html/P50/P50.html
+++ b/public_html/P50/P50.html
@@ -7,17 +7,36 @@
     <link href="../bootstrap/Css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <div class="jumbotron">
-      <h1>Point 50</h1>
-      <input type="number" id="emple" placeholder="Enter number of employees" style="width: 11%">
-      <button onclick="salve()">send</button><br><br>
-      <p id="p1"></p><br><br>
-      
-      <input type="text" id="name" placeholder="Name of electrician" style="width: 11%">
-      <input type="number" id="nu" placeholder="Enter number of hours worked" style="width: 12%">
-      <button onclick="vol()">send</button><br><br>
-      <p id="p2"></p><br><br>
-      <p id="p3"></p>
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-fm">
+            <span class="sr-only">To deploy / Hide Menu</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="../index.html" class="navbar-brand">Taller JavaScript</a>
+        </div>
+      </div>
+    </nav>
+    <div class="container jumbotron">
+      <h1 style="text-align: center">Point 50</h1><br>
+
+      <div class="col-xs-3 col-lg-offset-5">
+        <input type="number" class="form-control" id="emple" placeholder="Enter number of employees"><br>
+        <button class="btn btn-primary" onclick="salve()">send</button><br><br>
+        <p id="p1" style="text-align: center"></p><br><br>
+      </div>
+
+
+      <div class="col-xs-3 col-lg-offset-5">
+        <input type="text" class="form-control" id="name" placeholder="Name of electrician"><br>
+        <input type="number" class="form-control" id="nu" placeholder="Enter number of hours worked"><br>
+        <button class="btn btn-primary" onclick="vol()">send</button><br><br>
+        <p id="p2" style="text-align: center"></p>
+        <p id="p3" style="text-align: center"></p>
+      </div>
     </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
