--- a/public_html/P51/P51.html
+++ b/public_html/P51/P51.html
@@ -7,11 +7,26 @@
     <link href="../bootstrap/Css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-fm">
+            <span class="sr-only">To deploy / Hide Menu</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="../index.html" class="navbar-brand">Taller JavaScript</a>
+        </div>
+      </div>
+    </nav>
     <div class="jumbotron">
-      <h1>Point 51</h1>
-      <input type="number" id="year" placeholder="Enter your age">
-      <button onclick="salve()">send</button><br><br>
-      <p id="text51"></p>
+      <h1 style="text-align: center">Point 51</h1><br>
+      <div class="col-xs-2 col-lg-offset-5">
+        <input type="number" class="form-control" id="year" placeholder="Enter your age">
+      </div>
+      <button class="btn btn-primary" onclick="salve()">send</button><br><br>
+      <p id="text51" style="text-align: center"></p>
     </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
