--- a/public_html/P53/P53.html
+++ b/public_html/P53/P53.html
@@ -7,13 +7,28 @@
     <link href="../bootstrap/Css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <div class="jumbotron">
-      <h1>Point 53</h1>
-      <input type="number" id="nun1" placeholder="Enter a number"><br><br>
-      <input type="number" id="nun2" placeholder="Enter a number"><br><br>
-      <input type="number" id="nun3" placeholder="Enter a number"><br><br>
-      <button onclick="salve()">send</button><br><br>
-      <p id="text53"></p>
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-fm">
+            <span class="sr-only">To deploy / Hide Menu</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="../index.html" class="navbar-brand">Taller JavaScript</a>
+        </div>
+      </div>
+    </nav>
+    <div class="container jumbotron">
+      <h1 style="text-align: center">Point 53</h1><br>
+      <div class="col-xs-3 col-lg-offset-5">
+        <input type="number" class="form-control" id="nun1" placeholder="Enter a number"><br><br>
+        <input type="number" class="form-control" id="nun2" placeholder="Enter a number"><br><br>
+        <input type="number" class="form-control" id="nun3" placeholder="Enter a number"><br><br>
+        <button class="btn btn-primary" onclick="salve()">send</button><br><br><br>
+        <p id="text53" style="text-align: center"></p>
+      </div>
     </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
