--- a/public_html/P54/P54.html
+++ b/public_html/P54/P54.html
@@ -7,13 +7,28 @@
     <link href="../bootstrap/Css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <div class="jumbotron">
-      <h1>Point 54</h1>
-      <input type="number" id="sal" placeholder="Salary of the worker"><br><br>
-      <input type="number" id="ret" placeholder="Retention Rate"><br><br>
-      <button id="modal1">send</button>
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-fm">
+            <span class="sr-only">To deploy / Hide Menu</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="../index.html" class="navbar-brand">Taller JavaScript</a>
+        </div>
+      </div>
+    </nav>
+    <div class="jumbotron container">
+      <h1 style="text-align: center">Point 54</h1>
+      <div class="col-xs-2 col-lg-offset-5">
+        <input class="form-control" type="number" id="sal" placeholder="Salary of the worker"><br><br>
+        <input class="form-control" type="number" id="ret" placeholder="Retention Rate"><br><br>
+        <button class="btn btn-primary" id="modal1">send</button>
+      </div>
     </div>
-    
+
     <div class="modal fade" tabindex="-1" role="dialog" id="ko">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -24,8 +39,8 @@
           <div class="modal-body">
             <p id="rest"></p>
           </div>
-    <script src="../js/Jquery.js" type="text/javascript"></script>
-    <script src="../js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="P54.js" type="text/javascript"></script>
+          <script src="../js/Jquery.js" type="text/javascript"></script>
+          <script src="../js/bootstrap.min.js" type="text/javascript"></script>
+          <script src="P54.js" type="text/javascript"></script>
   </body>
 </html>
