--- a/public_html/P55/P55.html
+++ b/public_html/P55/P55.html
@@ -7,11 +7,26 @@
     <link href="../bootstrap/Css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <div class="jumbotron">
-      <h1>Point 55</h1>
-      <input type="number" id="sa" placeholder="Enter a number"><br><br>
-      <button onclick="salve()">send</button><br><br>
-      <p id="text55"></p>
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-fm">
+            <span class="sr-only">To deploy / Hide Menu</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="../index.html" class="navbar-brand">Taller JavaScript</a>
+        </div>
+      </div>
+    </nav>
+    <div class="jumbotron container">
+      <h1 style="text-align: center">Point 55</h1>
+      <div class="col-xs-3 col-lg-offset-5">
+        <input class="form-control" type="number" id="sa" placeholder="Enter a number"><br>
+        <button class="btn btn-primary" onclick="salve()">send</button><br><br>
+        <p id="text55" style="text-align: center"></p>
+      </div>
     </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
