--- a/public_html/P56/P56.html
+++ b/public_html/P56/P56.html
@@ -30,16 +30,11 @@
         <p id="text"></p>
         <div id="ocult1">
           <input class="form-control" type="number" id="help" placeholder="Enter the transport help"><br><br>
-          <button class="btn btn-primary" id="cual">send</button><br><br>
-          <p id="Text1"></p>
-          <p id="Text2"></p>
-          <p id="Text"></p>
+          <a href="P56.2.html" class="btn btn-primary" id="cual">Send</a>
         </div>
         <div id="ocult2">
           <input class="form-control" type="number" id="reten" placeholder="Enter retention at source"><br><br>
-          <button class="btn btn-primary" id="cual3">send</button><br><br>
-          <p id="as"></p>
-          <p id="asd"></p>
+          <a href="P56.2.html" class="btn btn-primary" id="cual3">Send</a>
         </div>
       </div>
     </div>
