--- a/public_html/P51/P51.html
+++ b/public_html/P51/P51.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../bootstrap/Css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
@@ -21,12 +22,12 @@
       </div>
     </nav>
     <div class="jumbotron">
-      <h1 style="text-align: center">Point 51</h1><br>
+      <h1>Point 51</h1><br>
       <div class="col-xs-2 col-lg-offset-5">
         <input type="number" class="form-control" id="year" placeholder="Enter your age">
       </div>
       <button class="btn btn-primary" onclick="salve()">send</button><br><br>
-      <p id="text51" style="text-align: center"></p>
+      <p id="text51"></p>
     </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
