--- a/public_html/P53/P53.html
+++ b/public_html/P53/P53.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../bootstrap/Css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="../P55/Styles.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
@@ -21,13 +22,13 @@
       </div>
     </nav>
     <div class="container jumbotron">
-      <h1 style="text-align: center">Point 53</h1><br>
+      <h1>Point 53</h1><br>
       <div class="col-xs-3 col-lg-offset-5">
         <input type="number" class="form-control" id="nun1" placeholder="Enter a number"><br><br>
         <input type="number" class="form-control" id="nun2" placeholder="Enter a number"><br><br>
         <input type="number" class="form-control" id="nun3" placeholder="Enter a number"><br><br>
         <button class="btn btn-primary" onclick="salve()">send</button><br><br><br>
-        <p id="text53" style="text-align: center"></p>
+        <p id="text53"></p>
       </div>
     </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
