--- a/public_html/P55/P55.html
+++ b/public_html/P55/P55.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../bootstrap/Css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
@@ -21,11 +22,11 @@
       </div>
     </nav>
     <div class="jumbotron container">
-      <h1 style="text-align: center">Point 55</h1>
+      <h1>Point 55</h1>
       <div class="col-xs-3 col-lg-offset-5">
         <input class="form-control" type="number" id="sa" placeholder="Enter a number"><br>
         <button class="btn btn-primary" onclick="salve()">send</button><br><br>
-        <p id="text55" style="text-align: center"></p>
+        <p id="text55"></p>
       </div>
     </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
