--- a/public_html/P60/P60.html
+++ b/public_html/P60/P60.html
@@ -23,7 +23,7 @@
     <div class="container jumbotron" style="width: 100%">
       <h1 style="text-align: center">Point 60</h1><br>
       <div class="col-xs-2 col-lg-offset-5">
-        <input type="number" id="horas" class="form-control" placeholder="Ingrese la hora"><br>
+        <input type="number" id="horas" class="form-control" placeholder="Enter the time"><br>
         <button id="kao" class="btn btn-primary">Send</button><br><br>
         <p id="text60"></p>
         <p id="text601"></p>
