--- a/public_html/P47/P47.html
+++ b/public_html/P47/P47.html
@@ -20,9 +20,11 @@
         </div>
       </div>
     </nav>
-    <div class="jumbotron">
-      <p id="text47"></p>
+    
+    <div class="container jumbotron" id="iniciar">
+      <h1 style="text-align: center">Point 47</h1>
     </div>
+    
     <script src="../js/Jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
     <script src="P47.js" type="text/javascript"></script>
