--- a/public_html/P48/P48.html
+++ b/public_html/P48/P48.html
@@ -20,6 +20,10 @@
         </div>
       </div>
     </nav>
+    
+    <div class="container jumbotron" id="iniciar">
+      <h1 style="text-align: center">Point 48</h1>
+    </div>
     <script src="../js/Jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
     <script src="P48.js" type="text/javascript"></script>
